feat(ui): implement base layout with Header, Footer, Cards, dark mode, and auth mocks

--- a/biome.json
+++ b/biome.json
@@ -17,5 +17,16 @@
   },
   "files": {
     "includes": ["**", "!**/dist", "!**/build", "!**/node_modules"]
-  }
+  },
+  "overrides": [
+    {
+      "linter": {
+        "rules": {
+          "suspicious": {
+            "noUnknownAtRules": "off"
+          }
+        }
+      }
+    }
+  ]
 }
