--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@biomejs/biome": "2.2.4",
     "@eslint/js": "^9.33.0",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/vite": "^4.1.13",
     "@types/node": "^24.5.0",
     "@types/react": "^19.1.10",
